@@ -24,21 +24,22 @@
 # to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
 # Boston, MA 02110-1301 USA.
 
-wato_enabled            = True
-wato_host_tags          = []
-wato_aux_tags           = []
-wato_hide_filenames     = True
-wato_hide_hosttags      = False
-wato_hide_varnames      = True
-wato_hide_help_in_lists = True
-wato_max_snapshots      = 50
-wato_num_hostspecs      = 12
-wato_num_itemspecs      = 15
-wato_activation_method  = 'restart'
-wato_write_nagvis_auth  = False
-wato_use_git            = False
-wato_hidden_users       = []
-wato_user_attrs         = []
+wato_enabled                   = True
+wato_host_tags                 = []
+wato_aux_tags                  = []
+wato_hide_filenames            = True
+wato_hide_hosttags             = False
+wato_upload_insecure_snapshots = False
+wato_hide_varnames             = True
+wato_hide_help_in_lists        = True
+wato_max_snapshots             = 50
+wato_num_hostspecs             = 12
+wato_num_itemspecs             = 15
+wato_activation_method         = 'restart'
+wato_write_nagvis_auth         = False
+wato_use_git                   = False
+wato_hidden_users              = []
+wato_user_attrs                = []
 
 def tag_alias(tag):
     for entry in wato_host_tags:
