@@ -119,6 +119,7 @@
     * 0965 Cumulative permissions and contact groups for WATO folders...
     * 0973 Renaming of hosts via WATO...
     * 0976 Show preview of active and custom checks in WATO services table...
+    * 0930 WATO snapshots: disabled upload of legacy snaphots and snapshots with invalid checksums...
     * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
     * 0904 FIX: Fixed exception in host parameter overview...
     * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
